refac(refac): fixing bug pada invoice
